<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="home">Home</string>
  <string name="search">Search</string>
  <string name="pokemon_type">Pokémon Type</string>
  <string name="exit_confirm" translation_description="The label for exit app confirmation">Press again to exit</string>
  <string name="exit_application">Exit App</string>
  <string name="loading">Loading</string>
  <string name="please_wait">Please Wait</string>
  <string name="re_connect">Re-connect</string>
  <string name="dismiss">Dismiss</string>
  <string name="username" translatable="false">Username</string>
  <string name="password" translatable="false">Password</string>
  <string name="type">Type</string>

  <string name="err_connection_label">Connection failed</string>
  <string name="err_connection_message">Check again Your connection</string>

  <string name="pokemon" translatable="false">Pokémon</string>
  <string name="pokedex" translatable="false">Pokédex</string>
  <string name="check_pokedex">Check Pokédex</string>

  <string name="welcome_message">All the Pokémon data you\'ll ever need in one place!</string>
  <string name="welcome_description">Thousands of data compiled in one place</string>

  <string name="more_detail">More detail</string>

  <string name="weight_dd" translatable="false">Weight:</string>
  <string name="height_dd" translatable="false">Height:</string>
  <string name="abilities_dd" translatable="false">Abilities:</string>
  <string name="type_dd" translatable="false">Type:</string>
  <string name="other_images_dd" translatable="false">Other Images:</string>
  <string name="stats_dd" translatable="false">Stats:</string>
  <string name="evolution_dd" translatable="false">Evolution:</string>

  <string name="pokemon_not_selected_title">Pokémon not yet selected</string>
  <string name="pokemon_not_selected_message">Select a pokémon first to load this page</string>
  <string name="pokemon_with_type">Showing pokémon with type %1$s</string>
</resources>