<?xml version="1.0" encoding="utf-8"?>
<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/label_other_images"
      style="@style/Headline.Moderate"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/content_horizontal_lv2"
      android:layout_marginTop="@dimen/space_x4"
      android:gravity="center|start"
      android:text="@string/other_images_dd"
      android:textColor="@color/color_on_background"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rv_other_images"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="@dimen/content_horizontal_lv2"
      android:layout_marginTop="@dimen/space_x1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/label_other_images" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/label_stats"
      style="@style/Headline.Moderate"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/content_horizontal_lv2"
      android:layout_marginTop="@dimen/space_x4"
      android:gravity="center|start"
      android:text="@string/stats_dd"
      android:textColor="@color/color_on_background"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/rv_other_images" />

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rv_stats"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="@dimen/content_horizontal_lv2"
      android:layout_marginTop="@dimen/space_x1"
      android:layout_marginBottom="@dimen/space_x6"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/label_stats" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/label_evolution"
      style="@style/Headline.Moderate"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/content_horizontal_lv2"
      android:layout_marginTop="@dimen/space_x4"
      android:gravity="center|start"
      android:text="@string/evolution_dd"
      android:textColor="@color/color_on_background"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/rv_stats" />

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rv_evolution"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="@dimen/content_horizontal_lv2"
      android:layout_marginTop="@dimen/space_x1"
      android:layout_marginBottom="@dimen/space_x6"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/label_evolution" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>